# feincms3

./: .eslintrc.js  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  biome.json  package.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: copilot-instructions.md
.github/workflows/: tests.yml
docs/: Makefile  admin.rst  apps.rst  build-your-cms.rst  cleanse.rst  conf.py  index.rst  installation.rst  introduction.rst  mixins.rst  models.rst  navigation.rst  next-steps.rst  plugins.rst  redirects.rst  requirements.txt  shortcuts.rst
docs/guides/: apps-and-instances.rst  apps-form-builder.rst  apps-introduction.rst  cookie-control.rst  form-builder-app.rst  meta-opengraph-tags.rst  multilingual-sites.rst  multisite-custom.rst  multisite.rst  multisite_custom.rst  navigation.rst  plugins.rst  redirects.rst  rendering.rst  templates-and-regions.rst  urls-and-views.rst
docs/howto/: apps-and-instances.rst  form-builder-app.rst  multisite.rst  navigation.rst  rendering.rst
docs/project/: contributing.rst
docs/ref/: applications.rst  apps.rst  cleansing.rst  embedding.rst  incubator.rst  inline_ckeditor.rst  pages.rst  plugins.rst  regions.rst  renderer.rst  root.rst  shortcuts.rst  templatetags.rst  utils.rst
docs/topics/: meta-opengraph-tags.rst  multilingual-sites.rst  templates-and-regions.rst
feincms3/: __init__.py  admin.py  applications.py  apps.py  cleanse.py  embedding.py  inline_ckeditor.py  mixins.py  pages.py  proxies.py  regions.py  renderer.py  shortcuts.py  utils.py
feincms3/incubator/: __init__.py  inline_ckeditor.py  newregions.py  root.py  root_passthru.py  subrenderer.py
feincms3/locale/de/LC_MESSAGES/: django.mo  django.po
feincms3/locale/en/LC_MESSAGES/: django.po
feincms3/locale/fr/LC_MESSAGES/: django.mo  django.po
feincms3/locale/it/LC_MESSAGES/: django.mo  django.po
feincms3/locale/nb_NO/LC_MESSAGES/: django.mo  django.po
feincms3/plugins/: __init__.py  apps.py  external.py  html.py  image.py  old_richtext.py  richtext.py  snippet.py  versatileimage.py
feincms3/root/: middleware.py  passthru.py
feincms3/static/feincms3/: admin.css  admin.js  box-drawing.css  box-drawing.js  inline-ckeditor-contents.css  inline-ckeditor.css  inline-ckeditor.js  move-form.css  plugin-ckeditor.css  plugin_ckeditor.js  static-path-style.js  static-path.js
feincms3/templatetags/: feincms3.py  feincms3_apps.py  feincms3_pages.py  feincms3_renderer.py
testapp/: admin.py  models.py  runtests.py  test_content_editor.py  urls.py  views.py
testapp/templates/: base.html
testapp/templates/testapp/: article_detail.html  page_detail.html
tests/: importable_module.py  manage.py  requirements.txt
tests/testapp/: admin.py  articles_urls.py  middleware.py  models.py  renderer.py  settings.py  test_applications.py  test_cleanse.py  test_embedding.py  test_feincms3.py  test_inline_ckeditor.py  test_languages.py  test_mixins.py  test_newregions.py  test_oembed.py  test_oldregions.py  test_pages.py  test_passthru.py  test_plugins.py  test_region_renderer.py  test_subrenderer.py  test_utils.py  translated_articles_urls.py  urls.py  utils.py  views.py
tests/testapp/templates/: 404.html  base.html  snippet.html
tests/testapp/templates/pages/: standard.html  with-sidebar.html
tests/testapp/templates/renderer/: html.html  image.html  richtext.html
tests/testapp/templates/testapp/: article_detail.html  article_list.html
tests/testapp/templatetags/: menus.py
