[metadata]
name = feincms3
version = attr: feincms3.__version__
description = CMS-building toolkit for Django
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/matthiask/feincms3/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = BSD-3-Clause
license_file = LICENSE
platforms = OS Independent
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
install_requires =
    Django>=3.2
    django-content-editor>=6.0
    django-js-asset>=2.0
    django-tree-queries>=0.6.0
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.extras_require]
all =
    django-imagefield
    html-sanitizer>=1.1.1
    requests
tests =
    coverage
    django-ckeditor
    requests-mock

[options.packages.find]
exclude =
    tests
    tests.*

[coverage:run]
branch = True
include =
    *feincms3*
    *testapp*
omit =
    *migrations*
    *.tox*
